--- a/config/promtail-config.yml
+++ b/config/promtail-config.yml
@@ -7,6 +7,8 @@ positions:
 
 clients:
   - url: http://{change_loki_ip}:3100/loki/api/v1/push
+    batchsize: 1048576
+    batchwait: 5s
 
 scrape_configs:
   - job_name: system
